# NumRecog

./: CMakeLists.txt  README.md  classify.cpp  final.cpp  infer.cpp  main.cpp  test.cpp
