cmake_minimum_required(VERSION 3.12)
project(NumRecog2)

set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR /home/Programs/opencv4.0.1/lib/cmake/opencv4/)
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS filesystem)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
add_executable(NumRecogExec main.cpp)
TARGET_LINK_LIBRARIES(NumRecogExec ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(classify classify.cpp)
TARGET_LINK_LIBRARIES(classify ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(infer infer.cpp)
TARGET_LINK_LIBRARIES(infer ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(final final.cpp)
TARGET_LINK_LIBRARIES(final ${OpenCV_LIBS} ${Boost_LIBRARIES})